// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент <Catch/> Дефолтный 1`] = `
<div>
  Полезный контент
</div>
`;

exports[`Компонент <Catch/> С кодом ошибки 1`] = `
.c0 {
  padding: 20px;
  background: #ffffff;
  color: #333333;
  border-radius: 2px;
  border: 2px solid #e1e1e1;
  font: 400 14px 'Open Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 20px;
  height: 20px;
  margin-right: 8px;
  fill: #e95454;
}

.c3 {
  margin-top: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="icon  c2"
      focusable="false"
      style={Object {}}
      viewBox="0 0 6 18"
    >
      <path
        d="M3.94 7l-1.49.49 1.43-5.23a1 1 0 0 0-.7-1.23 1 1 0 0 0-1.23.71L.04 8.75c-.1.36 0 .74.27.99s.65.34 1 .23l1.56-.51-.75 3.15a1 1 0 0 0 .97 1.23 1 1 0 0 0 .98-.77l1.15-4.89a.98.98 0 0 0-.29-.96A1 1 0 0 0 3.94 7zm-2.02 9.44c0 .26.11.53.29.72.19.18.44.29.71.29.26 0 .52-.11.71-.29.18-.19.29-.46.29-.72 0-.27-.11-.52-.29-.71a1.05 1.05 0 0 0-1.42 0c-.18.19-.29.45-.29.71z"
      />
    </svg>
    <div
      className="h h--size4"
    >
      Что-то пошло не так...
    </div>
  </div>
  <div
    className="c3"
  >
    Мы уже знаем об этой проблеме. Очень скоро мы ее исправим.
  </div>
  <div
    className="c3"
  >
    <span>
      Код ошибки
    </span>
    <span>
      : 
    </span>
    <b>
      awesomeErrorCode
    </b>
  </div>
</div>
`;

exports[`Компонент <Catch/> С ошибкой 1`] = `
.c0 {
  padding: 20px;
  background: #ffffff;
  color: #333333;
  border-radius: 2px;
  border: 2px solid #e1e1e1;
  font: 400 14px 'Open Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 20px;
  height: 20px;
  margin-right: 8px;
  fill: #e95454;
}

.c3 {
  margin-top: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="icon  c2"
      focusable="false"
      style={Object {}}
      viewBox="0 0 6 18"
    >
      <path
        d="M3.94 7l-1.49.49 1.43-5.23a1 1 0 0 0-.7-1.23 1 1 0 0 0-1.23.71L.04 8.75c-.1.36 0 .74.27.99s.65.34 1 .23l1.56-.51-.75 3.15a1 1 0 0 0 .97 1.23 1 1 0 0 0 .98-.77l1.15-4.89a.98.98 0 0 0-.29-.96A1 1 0 0 0 3.94 7zm-2.02 9.44c0 .26.11.53.29.72.19.18.44.29.71.29.26 0 .52-.11.71-.29.18-.19.29-.46.29-.72 0-.27-.11-.52-.29-.71a1.05 1.05 0 0 0-1.42 0c-.18.19-.29.45-.29.71z"
      />
    </svg>
    <div
      className="h h--size4"
    >
      Что-то пошло не так...
    </div>
  </div>
  <div
    className="c3"
  >
    Мы уже знаем об этой проблеме. Очень скоро мы ее исправим.
  </div>
</div>
`;
